layouts/content-sidebar.css
.site-content {
	background: #b2b2b2;
}
.site-content .widget-area {
	width: 380px;
	float: right;
	padding: 1em;
	background: #fff;
}
.site-footer {
	clear: both;
	width: 100%;
}

.entry-header,
.entry-content,
.entry-meta,
.entry-footer,
.tag-links,
.post-navigation,
.comments-area,
.paging-navigation {
	position: relative;
	max-width: 780px;
	padding: 0 1em;
	margin: 0 auto;
}

@media screen and (min-width: 1540px) {
	.content-area {
		float: left;
		width: 100%;
		margin-right: -380px;
	}
}

@media screen and (min-width: 1160px) and (max-width: 1539px) {
	.content-area {
		width: 100%;
		float: left;
		margin-left: -380px;
		padding-left: 380px;
	}

	.entry-header,
	.entry-content,
	.entry-meta,
	.entry-footer,
	.tag-links,
	.post-navigation,
	.comments-area,
	.paging-navigation {
		margin-right: 0;
	}

}

@media screen and (max-width: 1159px) {
	.site-content .widget-area {
		width: auto;
		max-width: 780px;
		float: none;
		margin: 1em auto 0;
	}
}

